--- a/Flipkat-master/src/app/app.component.html
+++ b/Flipkat-master/src/app/app.component.html
@@ -106,7 +106,7 @@
           </a>
         </li >
         <li class="nav-item">
-         <a class="nav-link" ><img class="circular--square" [src]="picture" (click)="getDate()" style='width: 20px; height:20px'data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">&nbsp;<font color="white">{{nickname}}</font>&nbsp;&nbsp;<i *ngIf="authService.isLoggedIn" class="glyphicon glyphicon-bell" style="font-size:15px; color:white"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i *ngIf="authService.isLoggedIn"class="glyphicon glyphicon-shopping-cart" style="font-size:15px; color:white"></i></a>
+         <a class="nav-link" ><img class="circular--square" [src]="picture" (click)="getDate()" style='width: 20px; height:20px'data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">&nbsp;<font color="white">{{nickname}}</font></a>
         </li>
        
         </ul>
